# password-manager

./: CMakeLists.txt  README.md  build.bat  build.sh  main.cpp  main.hpp
accounts/: account.create.cpp  account.create.hpp  account.delete.cpp  account.delete.hpp  account.handler.cpp  account.handler.hpp  account.login.cpp  account.login.hpp  create.cpp  create.hpp  delete.cpp  delete.hpp  login.cpp  login.hpp
crypto/: crypto.decryption.cpp  crypto.encryption.cpp  crypto.encryption.hpp  decryption.cpp  decryption.hpp  encryption.cpp  salting.cpp  salting.hpp  tool.aes128_cbc.cpp  tool.base64.cpp  tool.base64.hpp  tool.hex.cpp  tool.hex.hpp
passwords/: check.cpp  check.hpp  create.cpp  create.hpp  delete.cpp  list.cpp  list.hpp  password.create.cpp  password.create.hpp  password.delete.cpp  password.delete.hpp  password.generator.cpp  password.generator.hpp  password.list.cpp  password.show.cpp  password.show.hpp  password.validation.cpp  password.validation.hpp  show.cpp  show.hpp
tools/: aes128_cbc.cpp  aes128_cbc.hpp  base64.cpp  base64.hpp  hex.cpp  hex.hpp  integer.cpp  integer.hpp  terminal.cpp  terminal.hpp  text_format.cpp  text_format.hpp
utils/: tool.console.cpp  tool.console.hpp  tool.generator.cpp  tool.generator.hpp  tool.integer.cpp  tool.integer.hpp  tool.text_format.cpp  tool.text_format.hpp
